# stilometry

./: .gitignore  LICENSE  README.md  pyproject.toml  stilometry.py
.cursor/: agents-registry.json
.cursor/agents/: anti-slop-qa.md  corpus-guardian.md  linguistic-interpreter.md  metrics-analyst.md  parser-gap-estimator.md  personality-interpreter.md  profile-reviewer.md  profile-writer.md  prompt-compiler.md  report-auditor.md  stilometry-fixer.md
.cursor/commands/: stilometry-approve.md  stilometry-compile.md  stilometry-draft.md  stilometry-fix.md  stilometry-personality.md  stilometry-revise.md  stilometry-start.md
.cursor/rules/: stilometry-anti-slop.mdc  stilometry-approval-state.mdc  stilometry-evidence.mdc  stilometry-orchestrator.mdc  stilometry-plain-language.mdc  stilometry-privacy.mdc
.cursor/skills/fixer-stilometry/: SKILL.md
.cursor/skills/plain-language-report/: SKILL.md
.cursor/skills/privacy-local-first/: SKILL.md
.cursor/skills/report-provenance/: SKILL.md
docs/: GITHUB.md  VALIDATION.md
metrics/: human-labels.ru.json  metric-manifest.json
schemas/: approval.schema.json  llm-estimates.schema.json  metrics.schema.json  profile.schema.json  prompt.schema.json  run.schema.json
scripts/: install_nlp_models.py  stilometry.ps1  validate_install.py
shared/: agent-pipeline-pitfalls.md  pipeline-incident-fix-contract.md
src/stilometry/: __init__.py  cli.py  core.py  labels.py  parser_stack.py  schemas.py  session.py  workflow.py
stilometry-memory/: pipeline-fix-queue.md
tests/: test_mvp.py
(+3 files in other folders)
